Implementation of example project

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,10 +2,10 @@ use_frameworks!
 
 target 'SwiftOverlay_Example' do
   pod 'SwiftOverlay', :path => '../'
+  pod 'Kingfisher'
 
   target 'SwiftOverlay_Tests' do
     inherit! :search_paths
 
-    
   end
 end
